--- a/NewMaui/Pages/Parts/ModifyPart.xaml
+++ b/NewMaui/Pages/Parts/ModifyPart.xaml
@@ -5,13 +5,13 @@
              Title="ModifyPart">
     <StackLayout>
         <Label Text="Modify Part" FontSize="Large" HorizontalOptions="CenterAndExpand" Margin="0,10,0,30"/>
-        <Label Text="Part ID" FontSize="Medium"/>
+        <Label Text="ID" FontSize="Medium"/>
         <Entry x:Name="partIDEntry" Placeholder="ID" Keyboard="Numeric"/>
-        <Label Text="Part Name" FontSize="Medium"/>
+        <Label Text="Navn" FontSize="Medium"/>
         <Entry x:Name="partNameEntry"/>
-        <Label Text="Number In Stock" FontSize="Medium"/>
+        <Label Text="Antal på lager" FontSize="Medium"/>
         <Entry x:Name="numberInStockEntry" Keyboard="Numeric"/>
-        <Label Text="Part Price" FontSize="Medium"/>
+        <Label Text="Pris" FontSize="Medium"/>
         <Entry x:Name="partPriceEntry" Keyboard="Numeric"/>
         <Border WidthRequest="150"
                 HeightRequest="75"
